--- a/Client_first_page/css/home.css
+++ b/Client_first_page/css/home.css
@@ -24,7 +24,13 @@ h2 {
 }
 
 p {
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
+  font-weight: normal;
+  line-height: 1.5;
+  margin: 10px 0;
+  padding: 0; 
+  text-align: centre;
 }
 
 label {
